# sieve

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md
.github/workflows/: release.yml
ansible/: runtime-like-docker.yml
crates/sieve-app/: Cargo.toml
crates/sieve-app/src/: agent_loop.rs  auth_cli.rs  cli.rs  compose.rs  compose_gate.rs  config.rs  ingress.rs  lcm_integration.rs  logging.rs  main.rs  media.rs  personality.rs  planner_conversation.rs  planner_feedback.rs  planner_products.rs  planner_progress.rs  render_refs.rs  response_style.rs  sieve_home.rs  tests.rs  turn.rs  working_state.rs
crates/sieve-app/src/automation/: commands.rs  heartbeat.rs  manager.rs  manager_tests.rs  mod.rs  types.rs  types_tests.rs
crates/sieve-app/src/codex/: client.rs  manager.rs  mod.rs  naming.rs  store.rs
crates/sieve-app/src/prompts/: codex_image_ocr.md  heartbeat_events.md
crates/sieve-app/src/tests/: compose_feedback.rs  compose_gate.rs  config_env.rs  e2e_chat.rs  e2e_compose.rs  e2e_live.rs  guidance_progress.rs  lcm_context.rs  manifest_guard.rs  media.rs  models.rs  open_loops.rs  personality.rs  planner_conversation.rs  planner_core.rs  planner_products.rs  render_response.rs  response_style.rs  runtime_bridge.rs  sieve_home.rs  support.rs
crates/sieve-app/src/turn/: execute.rs  input.rs  mainline.rs  mod.rs  planner_loop.rs  response_refs.rs
crates/sieve-captrace/: Cargo.toml  README.md
crates/sieve-captrace/src/: cli.rs  command_match.rs  error.rs  escalation.rs  fixture.rs  generator.rs  lib.rs  main.rs  planner.rs  tests.rs  time_utils.rs
crates/sieve-captrace/src/generator/: cases.rs  help.rs  normalize.rs  reports.rs  templates.rs  trace_runner.rs  types.rs  util.rs
crates/sieve-captrace/src/planner/: app_server.rs  openai.rs
crates/sieve-captrace/src/tests/: mod.rs  seed_cases.rs  summary_generation.rs  summary_matching.rs  support.rs
crates/sieve-command-summaries/: Cargo.toml
crates/sieve-command-summaries/src/: agent_browser.rs  api.rs  brave-search.rs  builtin.rs  catalog.rs  codex.rs  common.rs  curl.rs  dispatch.rs  gws.rs  lib.rs  st.rs  tests.rs
crates/sieve-command-summaries/src/brave-search/: tests.rs
crates/sieve-command-summaries/src/builtin/: fs.rs  lcm.rs  mod.rs
crates/sieve-command-summaries/src/codex/: tests.rs
crates/sieve-command-summaries/src/st/: mod.rs  stt.rs  tests.rs  tts.rs
crates/sieve-command-summaries/src/tests/: agent_browser.rs  command_classes.rs  curl.rs  fs.rs  gws.rs  mod.rs  planner_catalog.rs  sieve_lcm.rs
crates/sieve-interface-telegram/: Cargo.toml  README.md
crates/sieve-interface-telegram/examples/: manual-smoke.rs
crates/sieve-interface-telegram/src/: adapter.rs  lib.rs  message.rs  transport.rs
crates/sieve-interface-telegram/src/adapter/: tests.rs
crates/sieve-interface-telegram/src/adapter/tests/: access_control.rs  approvals.rs  mod.rs  prompts.rs  runtime.rs  support.rs  typing.rs
crates/sieve-interface-telegram/src/transport/: tests.rs
crates/sieve-llm/: Cargo.toml  README.md
crates/sieve-llm/examples/: openai_live.rs
crates/sieve-llm/src/: auth.rs  codex_auth.rs  config.rs  lib.rs  openai.rs  tests.rs  wire.rs
crates/sieve-llm/src/codex/: client.rs  mod.rs  requests.rs
crates/sieve-llm/src/openai/: client.rs  exchange_logger.rs  mod.rs  models.rs  planner_retry.rs  requests.rs  tests.rs
crates/sieve-llm/src/prompts/: planner_regeneration_diagnostic.md  planner_system.md  summary_system.md
crates/sieve-llm/src/wire/: guidance.rs  mod.rs  openai_envelope.rs  planner.rs  response.rs  summary.rs  tests.rs
crates/sieve-policy/: Cargo.toml  README.md
crates/sieve-prompts/: Cargo.toml
crates/sieve-quarantine/: Cargo.toml  README.md
crates/sieve-runtime/: Cargo.toml
crates/sieve-runtime/src/: approval_allowance.rs  approval_bus.rs  approval_tools.rs  automation.rs  browser_session_summary.rs  browser_sessions.rs  codex.rs  event_log.rs  lib.rs  mainline.rs  orchestrator.rs  planner_turn.rs  shell_gate.rs  tests.rs  value_state.rs
crates/sieve-runtime/src/tests/: approval_core.rs  approval_modes.rs  approval_tools.rs  browser_sessions.rs  builders.rs  jsonl.rs  orchestrator.rs  planner.rs  policy.rs  support.rs  value_state.rs
crates/sieve-runtime/tests/: e2e_approval_gate.rs  e2e_live_llm_openai.rs  e2e_openclaw_prompt_injection_cases.rs  e2e_paper_cases.rs  e2e_remaining_mvp_blockers.rs  e2e_security_harness.rs  e2e_security_policy_flows.rs  e2e_security_quarantine_modes.rs
crates/sieve-runtime/tests/common/: mod.rs
crates/sieve-shell/: Cargo.toml  README.md
crates/sieve-tool-contracts/: Cargo.toml  README.md
crates/sieve-types/: Cargo.toml
docker/: install-repo-tool.sh  sieve-docker-entrypoint.sh
docs/: 260225-sieve-v3.md  TODO.md  agent-prompt-constraints-v1.2.md  cli-search-migration-notes.md  codex-app-server.md  implementation-workers-v0.md  lcm-cli-contract.md  mvp-completion-plan.md  personality-layering.md  running.md  scope-fides-sink-hardening.md  scope-quarantine-syscall-coverage.md  scope-shell-parser-parity.md  scope-tool-contract-hardening.md  sieve-v3-mvp-security.md  sieve-v3-mvp-spec-v1.3.md  telegram-fullflow-harness-plan.md
docs/policy/: baseline-policy.toml
docs/workers/: README.md  worker-1-sieve-types-implementation.md  worker-1-sieve-types.md  worker-2-sieve-shell-implementation.md  worker-2-sieve-shell.md  worker-3-sieve-command-summaries-status.md  worker-3-sieve-command-summaries.md  worker-4-sieve-policy-implementation.md  worker-4-sieve-policy.md  worker-5-sieve-quarantine-implementation.md  worker-5-sieve-quarantine.md  worker-6-sieve-llm-implementation-notes.md  worker-6-sieve-llm.md  (+4 more)
papers/: 25-camel.md
schemas/: approval-requested-event.schema.json  approval-resolved-event.schema.json
scripts/: build-release-bundle.sh  bump-version.sh  check-git-deps.sh  smoke-approval-expected.sh  smoke-requires-approval-expected.sh  test-check-git-deps-no-rg.sh  test-docker-runtime-image.sh  test-release-workflow.sh  test-runtime-host-playbook.sh
(+69 files in other folders)
