[package]
name = "sieve-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
sieve-command-summaries = { path = "../sieve-command-summaries" }
sieve-interface-telegram = { path = "../sieve-interface-telegram" }
sieve-llm = { path = "../sieve-llm" }
sieve-policy = { path = "../sieve-policy" }
sieve-quarantine = { path = "../sieve-quarantine" }
sieve-runtime = { path = "../sieve-runtime" }
sieve-shell = { path = "../sieve-shell" }
sieve-types = { path = "../sieve-types" }
tokio.workspace = true
