[package]
name = "sieve-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait.workspace = true
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
croner = "3.0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sieve-command-summaries = { path = "../sieve-command-summaries" }
sieve-interface-telegram = { path = "../sieve-interface-telegram" }
sieve-llm = { path = "../sieve-llm" }
sieve-policy = { path = "../sieve-policy" }
sieve-quarantine = { path = "../sieve-quarantine" }
sieve-runtime = { path = "../sieve-runtime" }
sieve-shell = { path = "../sieve-shell" }
sieve-types = { path = "../sieve-types" }
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }
