[package]
name = "sieve-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait.workspace = true
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
croner = "3.0.1"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sieve-command-summaries = { path = "../sieve-command-summaries" }
sieve-interface-telegram = { path = "../sieve-interface-telegram" }
sieve-llm = { path = "../sieve-llm" }
sieve-policy = { path = "../sieve-policy" }
sieve-tool-contracts = { path = "../sieve-tool-contracts" }
sieve-prompts = { path = "../sieve-prompts" }
sieve-quarantine = { path = "../sieve-quarantine" }
sieve-runtime = { path = "../sieve-runtime" }
sieve-shell = { path = "../sieve-shell" }
sieve-types = { path = "../sieve-types" }
sieve-lcm = { git = "https://github.com/nick1udwig/sieve-lcm", rev = "d8e6dc24b6e3258d4d293f281c639022a4c665e6" }
tokio.workspace = true
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
