[package]
name = "sieve-captrace"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
dotenvy = "0.15"
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
sieve-command-summaries = { path = "../sieve-command-summaries" }
sieve-llm = { path = "../sieve-llm" }
sieve-quarantine = { path = "../sieve-quarantine" }
sieve-shell = { path = "../sieve-shell" }
sieve-tool-contracts = { path = "../sieve-tool-contracts" }
sieve-types = { path = "../sieve-types" }
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
