[package]
name = "sieve-command-summaries"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
codex-shell-command = { git = "https://github.com/openai/codex.git", rev = "7754dd1b89c763b7ebba9f01a51f23a58dab2989", package = "codex-shell-command" }
sieve-policy = { path = "../sieve-policy" }
sieve-types = { path = "../sieve-types" }
