[package]
name = "sieve-llm"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sieve-types = { path = "../sieve-types" }
thiserror.workspace = true
tokio.workspace = true
