[package]
name = "sieve-llm"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sieve-command-summaries = { path = "../sieve-command-summaries" }
sieve-tool-contracts = { path = "../sieve-tool-contracts" }
sieve-types = { path = "../sieve-types" }
thiserror.workspace = true
tokio.workspace = true
url = "=2.5.8"
uuid = { version = "1", features = ["v4"] }
